src/testData/commands/errors/parent/test_allowDMs.ts
import { defineCommand } from "../../../../definitions.js";

export default defineCommand({
    key: "test_allowDMs",
    allowDMs: true
});
